# dioxus

./: Cargo.toml  Dockerfile  package-lock.json  package.json
assets/: input.css  tailwind.css
src/: app.rs  main.rs  style.css
